--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ hs_err_pid*
 /testeretângulo/build/
 /UltraEmojiCombat/build/
 /ControledeComissao3/nbproject/private/
+/ControledeComissao3/build/
+/ControledeComissao3/dist/
