--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ hs_err_pid*
 /ControledeComissao3/nbproject/private/
 /ControledeComissao3/build/
 /ControledeComissao3/dist/
+/Comissão 2/build/
+/Comissão 2/dist/
+/Comissão 2/nbproject/private/
