--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ hs_err_pid*
 /Comissão 2/nbproject/private/
 /Aula13/nbproject/private/
 /Aula13/build/
+/interfaceGrafica/nbproject/private/
+/InterfaceGrafica1/nbproject/private/
+/InterfaceGrafica1/build/
