--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ hs_err_pid*
 /interfaceGrafica/nbproject/private/
 /InterfaceGrafica1/nbproject/private/
 /InterfaceGrafica1/build/
+/InterfaceGrafica2/nbproject/private/
+/InterfaceGrafica2/build/
