Interface Gráfica Calculadora Básica

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ hs_err_pid*
 /InterfaceGrafica1/build/
 /InterfaceGrafica2/nbproject/private/
 /InterfaceGrafica2/build/
+/InterfaceGrafica3/nbproject/private/
+/InterfaceGrafica3/build/
